--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,10 +9,9 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
+      "16": "/images/favicon-16x16.png",
+      "32": "/images/favicon-32x32.png",
+      "192": "/images/android-chrome-192x192.png"
     }
   },
   "content_scripts": [
@@ -22,10 +21,9 @@
     }
   ],
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
+    "16": "/images/favicon-16x16.png",
+    "32": "/images/favicon-32x32.png",
+    "192": "/images/android-chrome-192x192.png"
   },
   "host_permissions": [
     "https://*/"
