--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -8,6 +8,7 @@
   },
   "action": {
     "default_popup": "popup.html",
+    "default_title": "Activate this to enable safe screen distance detection",
     "default_icon": {
       "16": "/images/favicon-16x16.png",
       "32": "/images/favicon-32x32.png",
@@ -29,5 +30,8 @@
     "https://*/"
   ],
   "permissions": ["storage", "tabs", "activeTab", "scripting"],
-  "options_page": "options.html"
+  "options_page": "options.html",
+  "content_security_policy": {
+    "extension-pages": "script-src 'self' 'unsafe-eval' https://docs.opencv.org/4.5.0/opencv.js; object-src 'self';"
+  }
 }
